--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.1.1:
+  date: 2013-11-9
+  changes:
+    - Fixed error in lib/client/ngSocket.js and update example
+
 v0.1.0:
   date: 2013-11-6
   changes:
